# sentry-crashpad-handler-wheel

./: CMakeLists.txt  LICENSE  README.md  crashpad_handler_version.txt  pyproject.toml
.github/workflows/: release.yml
sentry_crashpad_handler/: __init__.py
